SPDX: tag a bunch of incidental files
- Mostly CC0 because they're not interesting
- Some BSD-2-Clause because of habit

--- a/CHANGES
+++ b/CHANGES
@@ -1,3 +1,7 @@
+<!-- SPDX-FileCopyrightText: no
+     SPDX-License-Identifier: CC0-1.0
+-->
+
 This is the changelog for Calamares. For each release, the major changes and
 contributors are listed. Note that Calamares does not have a historical
 changelog -- this log starts with version 3.2.0. The release notes on the
